# django-nested-seed

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml  test.yml
django_nested_seed/: __init__.py
django_nested_seed/config/: __init__.py  base.py
django_nested_seed/core/: __init__.py  builder.py  constants.py  exceptions.py  loader.py  parser.py  registry.py  resolver.py
django_nested_seed/management/: __init__.py
django_nested_seed/management/commands/: nested_seed.py
django_nested_seed/relations/: __init__.py  base.py  foreign_key.py  many_to_many.py  one_to_one.py
django_nested_seed/utils/: __init__.py  topological.py
docs/: .gitignore  README.md  api.rst  conf.py  configuration.rst  database_lookups.rst  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  usage.rst  yaml_structure.rst
examples/: 01_basic_model.yaml  02_foreign_key_nested.yaml  03_foreign_key_referenced.yaml  04_foreign_key_mixed.yaml  05_reverse_foreign_key_nested.yaml  06_one_to_one.yaml  07_many_to_many.yaml  08_many_to_many_through.yaml  09_mixed_many_to_many.yaml  10_complex_multi_level.yaml  11_database_lookups.yaml  12_mixed_ref_and_lookup.yaml  13_yaml_features.yaml
tests/: conftest.py  test_auto_detection.py  test_db_lookups.py  test_list_format.py  test_loader.py  test_m2m_through.py  test_mixed_m2m.py  test_multiple_files.py  test_readme_scenarios.py
tests/testapp/: apps.py  models.py  settings.py
