[project]
name = "django-nested-seed"
version = "0.1.3"
description = "Django package for seeding data with nested relationships via YAML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "pyyaml>=6.0",
]
license = {text = "MIT"}
authors = [
    {name = "Omar Abou Mrad", email = "omar.aboumrad@gmail.com"}
]
keywords = ["django", "seed", "fixtures", "yaml", "testing", "database"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/omaraboumrad/django-nested-seed"
Repository = "https://github.com/omaraboumrad/django-nested-seed"
Issues = "https://github.com/omaraboumrad/django-nested-seed/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"
python_files = ["test_*.py"]
addopts = "--tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
